tests/ui/feature-gates/feature-gate-x86_amx_intrinsics.stderr
error[E0658]: the target feature `amx-tile` is currently unstable
  --> $DIR/feature-gate-x86_amx_intrinsics.rs:2:18
   |
LL | #[target_feature(enable = "amx-tile")]
   |                  ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #126622 <https://github.com/rust-lang/rust/issues/126622> for more information
   = help: add `#![feature(x86_amx_intrinsics)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
