tests/ui/feature-gates/feature-gate-x86_amx_intrinsics.rs
//@ only-x86_64
#[target_feature(enable = "amx-tile")]
//~^ ERROR: currently unstable
unsafe fn foo() {}

fn main() {}
